2006-04-30  Don Allingham  <don@gramps-project.org>
	* src/RelLib/_Person.py: prevent duplicate entries in family lists

2006-04-29  Don Allingham  <don@gramps-project.org>
	* src/Editors/_EditFamily.py: fix Select Person calls
	* src/docgen/Makefile.am: add ODSDoc.py
	* po/POTFILES.in: add ODSDoc.py
	* src/NEWS: Updated for 2.1.0 release

2006-04-29  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/CountAncestors.py: Add percent of theoretical ancestors

2006-04-28  Don Allingham  <don@gramps-project.org>
	* src/AddMedia.py: assign handle to notes

2006-04-28  Brian Matherly  <brian@gramps-project.org>
	* src/docgen/ODSDoc.py: Add Open Document Spreadsheet document
	* src/plugins/EventCmp.py: Use ODSDoc instead of OpenSpreadSheet

2006-04-28  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_MediaView.py (MediaView.add): Fix call to AddMedia
	* src/ViewManager.py: add ScratchPad to the View menu
	* src/Editors/_EditFamily.py: Fix tooltips
	* src/glade/gramps.glade: remove predefined tooltips
	* src/AutoComp.py (StandardCustomSelector.fill): handle unicode
	in addition to str
	* src/ScratchPad.py (ScratchPadWindow.__init__): fix call to
	set_window, passing proper arguments

2006-04-28  Alex Roitman  <shura@gramps-project.org>
	* src/ScratchPad.py (ScratchPadWindow.__init__): Allow only one
	instance; translate label; remove unneeded event handlers.
	* src/ViewManager.py (ViewManager.scratchpad): Catch exception.
	(ViewManager._init_lists): Translate menu labels.

2006-04-27  Alex Roitman  <shura@gramps-project.org>
	* src/ViewManager.py (ViewManager.build_plugin_menu): Use unique
	command-line name for action menu.
	* src/plugins/GraphViz.py: Fix report.
	* src/PluginUtils/_PluginMgr.py (_register_standalone): Remove
	unneeded import.
	* src/PluginUtils/_Plugins.py (build_tools_menu, build_report_menu,
	build_plugin_menu, by_menu_name): Remove functions already
	re-implemented in ViewManager.
	* src/plugins/EventCmp.py: Correct button label.